Added locking firmware

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,7 @@ lib_deps =
   https://github.com/milan1984/EdgeLib #Edge detection library
   https://github.com/milan1984/TimersLib #Timers libraryS
   https://github.com/milan1984/LEDBlinker
+
+extra_scripts = 
+    pre:unlock_firmware.py
+    post:lock_firmware.py
